Loading and delete

--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -3,6 +3,18 @@
 	padding-right: 64px;
 }
 
+.action {
+	margin-right: 10px;
+}
+
 .done-action {
 	color: green;
+}
+
+.delete-action {
+	color: red;
+}
+
+.loadingImage {
+	width: 100%;
 }
